<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_global"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/editText_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_url" />
    <Button
        android:id="@+id/button_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_buttom"
        android:onClick="openWebsite"
        android:text="@string/button_url" />
    <EditText
        android:id="@+id/editText_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_loc" />
    <Button
        android:id="@+id/button_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_buttom"
        android:onClick="openLocation"
        android:text="@string/open_location" />
    <EditText
        android:id="@+id/editText_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_share" />
    <Button
        android:id="@+id/button_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_buttom"
        android:onClick="sharetext"
        android:text="@string/share_this_text" />
</LinearLayout>